[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ProjectileGenerator/Enemy_Projectile_Movement.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/Boss2/Golem_Armor_AttackC_FX.tres" type="SpriteFrames" id=2]

[node name="Enemy2Projectile" type="KinematicBody2D"]
position = Vector2( -1.14905, -5.64645 )
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="damage_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="damage_area"]
position = Vector2( -2.85095, 5.64645 )
scale = Vector2( 3.32812, 3.32812 )
polygon = PoolVector2Array( -3.60563, -1.43275e-07, -3.60563, -0.30047, 1.20188, -0.901409, 3.9061, -0.901409, 3.9061, 0.600939, 1.20188, 0.600939 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.57952, 5.09645 )
scale = Vector2( 1.3, 1.3 )
frames = ExtResource( 2 )
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -10.2027, 6.73884 )
scale = Vector2( 0.56483, 0.509239 )
rect = Rect2( -10, -10, 47.802, 13.746 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.85095, 5.64645 )
scale = Vector2( 3.32812, 3.32812 )
polygon = PoolVector2Array( -3.60563, -1.43275e-07, -3.60563, -0.30047, 1.20188, -0.901409, 3.9061, -0.901409, 3.9061, 0.600939, 1.20188, 0.600939 )

[node name="projectile_despawn_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="timeout" from="projectile_despawn_timer" to="." method="_on_projectile_despawn_timer_timeout"]
